[package]
name = "stock-token"
version = "0.1.0"
edition = "2021"

[features]
default = ["forbid-additional-mints"]
no-entrypoint = []
test-sbf = []
forbid-additional-mints = []

[dependencies]
arrayref = "0.3.7"
chrono = "0.4.31"
chrono-tz = "0.9.0"
solana-program = "1.17.6"
spl-program-error = "0.4.1"
spl-tlv-account-resolution = "0.6.3"
spl-token-2022 = { version = "3.0.2", features = ["no-entrypoint"] }
spl-transfer-hook-interface = { version = "0.6.3" }
spl-type-length-value = { version = "0.4.3" }


[dev-dependencies]
solana-program-test = "1.18.16"
solana-sdk = "1.18.16"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
